Fixed row viewpoint and mobile spacing

--- a/02 - Bootstrap/css/styles.css
+++ b/02 - Bootstrap/css/styles.css
@@ -5,6 +5,10 @@
   --main-hvr-color: #190061;
 }
 
+.row {
+  width: 100vw;
+}
+
 * {
   color: white;
   text-decoration: none;
@@ -82,6 +86,8 @@ a:hover {
   margin: 0 auto;
   margin-top: 30px;
 
+  padding: 25px;
+
 }
 
 .card img {
@@ -104,7 +110,7 @@ footer {
   border-radius: 20px 20px 0 0;
 
   margin: 0 auto;
-  margin-top: 30px;
+  margin-top: 50px;
 }
 
 .footerNav {
@@ -133,17 +139,19 @@ footer {
 
 @media (max-width: 420px) {
 
+  
   body {
     width: 97%;
   }
   .card {
     display: flex;
-    margin: -40px;
-    margin-top: 60px;
+    margin: -60px;
+    margin-top: 75px;
   }
 
   footer {
-    margin-top: 60px;
+    margin-top: 100px;
+    width: 80vw;
   }
 
   .footerNav a {
